# AI-Powered-Automated-Smart-Doorbell

./: README.md  main.py  pyproject.toml
