[project]
name = "automated-doorbell"
version = "0.1.0"
description = ""
authors = [
    {name = "mdwasikhan54",email = "mdwasikhan54@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "face-recognition (>=1.3.0,<2.0.0)",
    "playsound (==1.2.2)",
    "face-recognition-models @ git+https://github.com/ageitgey/face_recognition_models"
]

[tool.poetry]
packages = [{include = "automated_doorbell", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
